# Exp-rob-assignment2

./: README.md  rosbot_domain.pddl  rosbot_problem.pddl  rosplan_services.bash
assignment_pkg/: CMakeLists.txt  new_problem.pddl  package.xml  rosbot_domain.pddl  rosbot_problem.pddl
assignment_pkg/include/assignment_pkg/: my_action.h
assignment_pkg/launch/: move_base.launch  rosplan_init.launch  simulation.launch
assignment_pkg/param/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
assignment_pkg/pddl/: rosbot_domain.pddl
assignment_pkg/scripts/: logic.py
assignment_pkg/src/: markers_node.cpp  my_action.cpp
assignment_pkg/srv/: detection_srv.srv
my_rosplan_interface/: CMakeLists.txt  package.xml
my_rosplan_interface/include/my_rosplan_interface/: my_action.h
my_rosplan_interface/src/: my_action.cpp  my_action_2.cpp
rosbot_ros/rosbot_bringup/launch/: gmapping.launch  rosbot_gazebo.launch  rosbot_rviz.launch  rosbot_rviz_gmapping.launch
rosbot_ros/rosbot_description/urdf/: rosbot.gazebo  rosbot.xacro
rosbot_ros/rosbot_gazebo/launch/: assignment_rosbot.launch  real_rosbot.launch
rosbot_ros/rosbot_navigation/config/: global_costmap_params.yaml  local_costmap_params.yaml
src/aruco_ros/launch/: marker_publisher.launch
src/aruco_ros/src/: marker_publish.cpp
src/rosbot_description/config/: joint_state_controller.yaml
src/rosbot_description/urdf/: rosbot.gazebo  rosbot.xacro
src/rosbot_gazebo/: package.xml
src/rosbot_gazebo/launch/: assignment_gazebo.launch
