<?xml version="1.0"?>
<package format="2">
  <name>assignment_pkg</name>
  <version>0.0.0</version>
  <description>The assignment_pkg package</description>

  <maintainer email="gabri@todo.todo">gabri</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_control</depend>
  <depend>xacro</depend>
  <depend>cv_bridge</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>tf</depend>
  <depend>aruco</depend>
  <depend>aruco_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  
  <export>
  </export>
</package>
